--- a/recruit-gui/src/app/recruiter-alerts/recruiter-alerts.component.html
+++ b/recruit-gui/src/app/recruiter-alerts/recruiter-alerts.component.html
@@ -2,6 +2,9 @@
 
 <div class="container-div">
 	
+	<div class="action-buttons">
+		<button class="btn btn-secondary btn-listing" routerLink="/suggestions">Back</button>
+	</div>
 	<div *ngIf="!hasAlerts()">
 		<h1>Search Alerts</h1>
 		<p>You currently have no Alert's. Alerts allow you to receive a notification via email whenever a Candidate is added to the system that meets one of your pre-defined searches</p>
