--- a/recruit-gui/src/app/email/email.component.css
+++ b/recruit-gui/src/app/email/email.component.css
@@ -4,13 +4,16 @@
 }
 
 .content-div{
-	margin:20px;
+	margin:10px;
+	margin-left:30px;
+	margin-right:30px;
 }
 
 .email-buttons{
-	height:75px;
 	border-bottom:1px solid grey;
 	margin-bottom:20px;
+	padding-bottom:20px;
+	min-height:75px;
 }
 
 th{
@@ -128,4 +131,12 @@ tr:nth-child(even){
 	color:white;
 	cursor:pointer;
 	text-decoration:underline;
+}
+
+.email_viewed_true{
+	font-weight:normal;
+}
+
+.email_viewed_false{
+	font-weight:bold;
 }
