--- a/recruit-gui/src/app/listing/listing.component.css
+++ b/recruit-gui/src/app/listing/listing.component.css
@@ -1,6 +1,11 @@
+.page{
+	width:98%;
+	margin-bottom:100px;
+}
+
 .center {
   margin: auto;
-  width: 90%;
+  width: 50%;
   padding: 10px;
 }
 
@@ -25,7 +30,7 @@
  }
  
  .btn-listing{
- 	margin-top:20px;
+ 	margin-top:15px;
 	min-width:150px;
 }
 
@@ -122,6 +127,7 @@
 
 .listing-view-div{
 	margin-top:10px;
+	margin-right:30px;
 }
 
 .listing{
@@ -129,6 +135,7 @@
 	background:#e8e8e8;
 	width:90%;
 	margin:10px;
+	margin-left:30px;
 	padding:10px;
 	border-radius:25px 25px 25px 25px;
 	float:left;
@@ -191,6 +198,7 @@
 .contact-recruiter-textarea{
 	width:100%;
 	height:200px;
+	margin-top:20px;
 }
 
 .email-label{
@@ -229,4 +237,8 @@
     font-size: large;
     height:200px;
     text-align: center;
+}
+
+.listing-view{
+	margin-left:30px;
 }
