event view listing off for admin and look and feel changes

--- a/recruit-gui/src/app/recruiter-alerts/recruiter-alerts.component.html
+++ b/recruit-gui/src/app/recruiter-alerts/recruiter-alerts.component.html
@@ -8,7 +8,7 @@
 	<div *ngIf="!hasAlerts()">
 		<h1>Search Alerts</h1>
 		<p>You currently have no Alert's. Alerts allow you to receive a notification via email whenever a Candidate is added to the system that meets one of your pre-defined searches</p>
-		<p>To add a Search Alert perform a Search in either the Candidates or Suggestions screen and click on 'Create Alert'</p>
+		<p>To add a Search Alert perform a Search in the Suggestions screen and click on 'Create Alert'</p>
 	</div>
 	
 	<div *ngIf="hasAlerts()">
