--- a/recruit-gui/src/app/listing/listing.component.css
+++ b/recruit-gui/src/app/listing/listing.component.css
@@ -9,22 +9,7 @@
   padding: 10px;
 }
 
-.listing-nav{
-     cursor:pointer;
-     color:blue;
-     font-weight:bold;
-     margin-left:20px;
-     margin-right:20px;
- }
-
- .listing-nav-disabled{
-     color:grey;
-     font-weight:bold;
-     margin-left:20px;
-     margin-right:20px;
- }
- 
- .listing-step-content{
+.listing-step-content{
  	margin-top:50px;
  	margin-left:50px;
  }
@@ -84,7 +69,7 @@
 
 .action-buttons{
 	text-align:right;
-	margin-right:0px;
+	margin-right:10px;
 }
 
 .btnRight{
@@ -94,13 +79,6 @@
     min-width:100px;
 }
 
-.pagination-options{
-	margin-top:20px;
-	margin-bottom:10px;
-	text-align:right;
-	width:90%;
-}
- 
 .listing-nav{
 	cursor:pointer;
 	color:blue;
@@ -133,11 +111,11 @@
 .listing{
 	/*border:5px solid #6c757d;*/
 	background:#e8e8e8;
-	width:90%;
 	margin:10px;
 	margin-left:30px;
+	margin-right:30px;	
 	padding:10px;
-	border-radius:25px 25px 25px 25px;
+	border-radius:0px 25px 25px 0px;
 	float:left;
 	min-height: inherit;
 	height:100%;
@@ -163,7 +141,7 @@
 	margin-right:10px;	  
 }
 
-.active-contract-type-filter{
+.active-filter{
 	height: 20px;
   	width: 20px;
   	background-color: #6f42c1;
@@ -173,7 +151,7 @@
  	margin-top:8px;
 }
 
-.inactive-contract-type-filter{
+.inactive-filter{
 	height: 20px;
   	width: 20px;
   	background-color: grey;
@@ -181,6 +159,7 @@
  	display: inline-block;
  	margin-right:5px;
  	margin-top:8px;
+ 	cursor:pointer;
 }
 
 .listing-title{
@@ -241,4 +220,30 @@
 
 .listing-view{
 	margin-left:30px;
+}
+
+.filters{
+	margin-top:20px;
+	margin-left:30px;
+	margin-right:30px;
+	border-bottom:1px solid black;
+	margin-bottom:10px;
+	background:#e8e8e8;
+}
+
+.filters table tr th{
+	font-weight:bold;
+	padding-left:10px;
+}
+
+.filters table tr td ul li{
+	min-width:110px;
+}
+
+.filters-title{
+	background:#6c757d;
+	padding-left:30px;
+	color:white;
+	font-weight:bold;
+	padding-left:10px;
 }
