--- a/recruit-gui/src/app/listing/listing.component.html
+++ b/recruit-gui/src/app/listing/listing.component.html
@@ -15,8 +15,8 @@
 						<div>
 						
 							<div class="filters">
-								<div class="filters-title" *ngIf="displayFilters">Filters:<span style="float:right; margin-right:20px;cursor:pointer" (click)="toggleFilters()"> Hide </span></div>
-								<div class="filters-title" *ngIf="!displayFilters">Filters:<span style="float:right; margin-right:20px;cursor:pointer" (click)="toggleFilters()"> Show </span></div>
+								<div class="filters-title" *ngIf="displayFilters"  (click)="toggleFilters()">Filters:<span style="float:right; margin-right:20px;cursor:pointer"> Hide </span></div>
+								<div class="filters-title" *ngIf="!displayFilters" (click)="toggleFilters()">Filters:<span style="float:right; margin-right:20px;cursor:pointer"> Show </span></div>
 								<table *ngIf="displayFilters">
 									<tr>
 										<th>Contract Type</th>
