--- a/recruit-gui/src/app/email/email.component.css
+++ b/recruit-gui/src/app/email/email.component.css
@@ -144,3 +144,34 @@ tr:nth-child(even){
 .no-emails{
 	text-align:center;
 }
+
+.modal-body{
+    font-size: large;
+    height:400px;
+    text-align: center;
+}
+
+.modal-title{
+	margin-left:20px;
+}
+
+.modal-header{
+     background:#181414;
+     color:#6A5ACD;
+     font-weight:bold;
+}
+
+.modal-body textarea{
+	width:100%;
+	height:310px;
+	margin:5px;
+}
+
+.filter-close-box{
+	cursor:pointer;
+}
+
+.modal-feedback{
+	margin-top:50px;
+	height:150px;
+}
