search function enhancement and listing layout for mobile

--- a/recruit-gui/src/app/listing/listing.component.html
+++ b/recruit-gui/src/app/listing/listing.component.html
@@ -46,10 +46,7 @@
 								</table>
 							</div>
 							
-							
-							
-							
-							<div *ngFor="let listing of listings" class="listing">
+							<div *ngFor="let listing of listings" class="listing {{mobileListingclass}}">
 							
 								<table>
 									<tr>
