--- a/recruit-gui/src/app/listing/listing.component.css
+++ b/recruit-gui/src/app/listing/listing.component.css
@@ -108,21 +108,6 @@
 	margin-right:30px;
 }
 
-.listing{
-	/*border:5px solid #6c757d;*/
-	background:#e8e8e8;
-	margin:10px;
-	margin-left:30px;
-	margin-right:30px;	
-	padding:10px;
-	border-radius:0px 25px 25px 0px;
-	float:left;
-	min-height: inherit;
-	height:100%;
-	cursor:pointer;
-	width:96%;
-}
-
 .listing-country{
 	margin-right:20px;
 	margin-left:10px;
@@ -232,6 +217,26 @@
 	background:#e8e8e8;
 }
 
+.listing{
+	/*border:5px solid #6c757d;*/
+	background:#e8e8e8;
+	margin:10px;
+	margin-left:30px;
+	margin-right:30px;	
+	padding:10px;
+	border-radius:0px 25px 25px 0px;
+	float:left;
+	min-height: inherit;
+	height:100%;
+	cursor:pointer;
+	min-width:96%;
+}
+
+.mobile-listing-layout{
+	width:100px;
+	min-width:85%;
+}
+
 .filters table tr th{
 	font-weight:bold;
 	padding-left:10px;
@@ -248,3 +253,4 @@
 	font-weight:bold;
 	padding-left:10px;
 }
+
