--- a/recruit-gui/src/app/email/email.component.html
+++ b/recruit-gui/src/app/email/email.component.html
@@ -11,20 +11,17 @@
 				<button class="btn btn-secondary action-btn" (click)="viewInbox()">Back</button>
 			</div>
 		</div>
-		<div *ngIf="hasEmails()">
-			<table class="table marketplace-table tab-nav" *ngIf="currentView == 'view-inbox'">
+		
+		<div *ngIf="hasEmails()" >
+			<table class="table email-table tab-nav" *ngIf="currentView == 'view-inbox'">
 				<thead>
 					<tr>
-						<th>id</th>
-						<th>viewed</th>
 						<th>From</th>
 						<th>Subject</th>
 						<th>Sent</th>
 					</tr>
 				</thead>
 				<tr class="email_viewed_{{email.viewed}}" *ngFor="let email of emails" (click)="viewEmail(email)">
-					<td>{{email.id}}</td>
-					<td>{{email.viewed}}</td>
 					<td>{{email.sender.senderName}}</td>
 					<td>{{email.title}}</td>
 					<td>{{email.created | date: 'dd MMM'}}</td>
