--- a/recruit-gui/src/app/recruiter-profile/recruiter-profile.component.html
+++ b/recruit-gui/src/app/recruiter-profile/recruiter-profile.component.html
@@ -33,7 +33,7 @@
 						<td>
 							<select formControlName="recruiterType">
 								<option></option>
-								<option *ngFor="let opt of getRecruitmentTypeOptions()" name="opt">{{opt[1]}}</option>
+								<option *ngFor="let opt of getRecruitmentTypeOptions()" value="{{opt}}">{{opt[1]}}</option>
 							</select>
 						</td>
 					</tr>
@@ -48,12 +48,12 @@
 						<td>
 							<select formControlName="recruitsIn" (change)="addRecruitsInItem()">
 								<option></option>
-								<option *ngFor="let opt of getCountryOptions()" name="opt">{{opt[1]}}</option>
+								<option *ngFor="let opt of getCountryOptions()"	value="{{opt}}">{{opt[1]}}</option>
 							</select>
 							<br>
 							<div class="selected-items">
 								<span *ngFor="let item of recruitsIn" (click)="removeRecruitsInItem(item)" class="selected-item">
-									{{item}}
+									{{item | tupleStrValueByPos: false}}
 								</span>
 							</div>
 						</td>
@@ -70,12 +70,12 @@
 						<td>
 							<select formControlName="languagesSpoken" (change)="addLanguageSpokenItem()">
 								<option></option>
-								<option *ngFor="let opt of getLanguageOptions()" name="opt[0]">{{opt[1]}}</option>
+								<option *ngFor="let opt of getLanguageOptions()" value="{{opt}}">{{opt[1]}}</option>
 							</select>
 							<br>
 							<div class="selected-items">
 								<span *ngFor="let item of languagesSpoken" (click)="removeLanguageSpokenItem(item)" class="selected-item">
-									{{item}}
+									{{item | tupleStrValueByPos: false}}
 								</span>
 							</div>
 						</td>
@@ -85,12 +85,12 @@
 						<td>
 							<select formControlName="sectorItem" (change)="addSectorItem()">
 								<option></option>
-								<option *ngFor="let opt of getSectorOptions()" name="opt[0]">{{opt[1]}}</option>
+								<option *ngFor="let opt of getSectorOptions()" value="{{opt}}">{{opt[1]}}</option>
 							</select>
 							<br>
 							<div class="selected-items">
 								<span *ngFor="let item of sectors" (click)="removeSectorItem(item)" class="selected-item">
-									{{item}}
+									{{item | tupleStrValueByPos: false}}
 								</span>
 							</div>
 						</td>
@@ -100,12 +100,12 @@
 						<td>
 							<select formControlName="coreTechItem" (change)="addCoreTechItem()">
 								<option></option>
-								<option *ngFor="let opt of getTechOptions()" name="opt[0]">{{opt[1]}}</option>
+								<option *ngFor="let opt of getTechOptions()" value="{{opt}}">{{opt[1]}}</option>
 							</select>
 							<br>
 							<div class="selected-items">
 								<span *ngFor="let item of coreTech" (click)="removeCoreTechItem(item)" class="selected-item">
-									{{item}}
+									{{item | tupleStrValueByPos: false}}
 								</span>
 							</div>
 						</td>
@@ -115,12 +115,12 @@
 						<td>
 							<select  formControlName="contractTypeItem" (change)="addContractTypeItem()">
 								<option></option>
-								<option *ngFor="let opt of getContractTypeOptions()" name="opt[0]">{{opt[1]}}</option>
+								<option *ngFor="let opt of getContractTypeOptions()" value="{{opt}}">{{opt[1]}}</option>
 							</select>
 							<br>
 							<div class="selected-items">
 								<span *ngFor="let item of contractTypes" (click)="removeContractTypeItem(item)" class="selected-item">
-									{{item}}
+									{{item | tupleStrValueByPos: false}}
 								</span>
 							</div>
 						</td>
